Opened 7 years ago
Closed 7 years ago
#8141 closed defect (fixed)
null pointer passed as argument at libavutil/encryption_info.c
| Reported by: | Suhwan | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avutil |
| Version: | git-master | Keywords: | ubsan |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug:
There's a null pointer passed as argument 2 bug, which is declared to never be null in libavutil/encryption_info.c:334:28
libavutil/encryption_info.c:334:28: runtime error: null pointer passed as argument 2, which is declared to never be null /usr/include/string.h:43:28: note: nonnull attribute specified here SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior libavutil/encryption_info.c:334:28 in
How to reproduce:
% ./ffmpeg_g -loglevel 99 -stream_loop 18 -y -r 97 -i gizmo-frag-cencinit.mp4 -map 0 -c copy -disposition: s:5 pcx -aframes 13 -ac 6 -b:v 919k -strict 0 output/tmp.avi ffmpeg version N-94887-ge55018ee11 (git master) built on ... ubuntu 18.04 with clang-6 and UBSAN option.
Attachments (2)
Change History (3)
by , 7 years ago
| Attachment: | gizmo-frag-cencinit.mp4 added |
|---|
by , 7 years ago
| Attachment: | gdb-log-null_pointer added |
|---|
comment:1 by , 7 years ago
| Component: | undetermined → avutil |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Fixed in e6018fda14d7cfe2c890fb336c9264c4ea0b6c5c.